--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION = mongodb://localhost:27017/?readPreference=primary&appname=blogPost
+DB_CONNECTION = mongodb+srv://Albert:1234@cluster0-rprnm.mongodb.net/test?retryWrites=true&w=majority
