--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^5.9.11",
     "path": "^0.12.7",
     "pug": "^2.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
